<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true"
    >


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    >

    <ImageView
        android:id="@+id/homework2_pokemon_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        tools:background="@android:color/holo_green_dark"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/homework2_pokemon_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/row_pokemon_id_text"
        android:textSize="45sp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/homework2_pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row_pokemon_name_text"
        android:textStyle="bold"
        android:layout_toEndOf="@id/homework2_pokemon_id"
        android:textSize="25sp"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/homework2_pokemon_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row_pokemon_weight_text"
        android:layout_toEndOf="@id/homework2_pokemon_id"
        android:layout_below="@id/homework2_pokemon_name"
        android:textSize="15sp"
        android:layout_marginEnd="5dp"

        />

    <TextView

        android:id="@+id/homework2_pokemon_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row_pokemon_height_text"
        android:layout_below="@id/homework2_pokemon_name"
        android:layout_toEndOf="@id/homework2_pokemon_weight"
        android:textSize="15sp"
        />


</RelativeLayout>
</android.support.v7.widget.CardView>
